# QuantCrate

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
portfolio/: index.html
qcr/: __init__.py  adapters.py  adjust.py  auditor.py  cli.py  ingest.py  schema.py  storage.py  vtable.py
tests/: test_adapters.py  test_adjust.py  test_auditor.py  test_cli.py  test_encoding.py  test_resumption.py  test_storage.py  test_vtable.py
