[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QuantCrate"
version = "0.1.1"
description = "A smart binary container for financial time-series data."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Chinmay Shanbhag" , email = "chinmay.shanbhag@gmail.com"},
]
keywords = ["finance", "quant", "time-series", "ohlcv", "data", "parquet", "arrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyarrow>=15.0",
    "polars>=1.0",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
adapters = [
    "yfinance>=0.2.28",
]
sql = [
    "duckdb>=1.0",
]

[project.urls]
Homepage = "https://github.com/ChinmayShanbhag/QuantCrate"
Repository = "https://github.com/ChinmayShanbhag/QuantCrate"

[project.scripts]
qcr = "qcr.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["qcr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
